--- a/frontend/src/components/Login/index.scss
+++ b/frontend/src/components/Login/index.scss
@@ -1,47 +1,108 @@
-.login {
+.login-container {
     width: 30vw;
     margin-left: 35vw;
-    display: flex;
     margin-top: 15vh;
+    padding: 2.5vh;
     border-radius: 2vh;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     background: rgba(217, 208, 192, 0.624);
-
-    span {
-        color: red;
-    }
-
-    form {
-        padding: 2.5vh;
+    display: flex;
+    flex-direction: column;
+    
+    // Common styles for all prompts
+    .login-username-prompt,
+    .login-password-prompt {
         margin-bottom: 1vh;
-
-        input {
-            outline: none;
-            text-align: center;
-            box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
-            rgba(0, 0, 0, 0.23) 0px 3px 6px;
+        
+        p {
+            margin: 0;
+            font-weight: 500;
         }
     }
-
+    
+    // Common styles for all input containers
+    .login-username-input,
+    .login-password-input {
+        margin-bottom: 2vh;
+        position: relative;
+        
+        input {
+            width: 100%;
+            height: 4vh;
+            padding: 1vh;
+            border-radius: 0.5vh;
+            border: none;
+            outline: none;
+            text-align: center;
+            box-sizing: border-box;
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+        }
+    }
+    
+    // Password container with input and toggle button
+    .password-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 2vh;
+        gap: 1vh;
+        
+        .login-password-input {
+            flex: 1;
+            margin-bottom: 0;
+            
+            input {
+                width: 100%;
+                font-family: monospace; /* Better for password masking */
+                letter-spacing: 0.1em; /* Improves readability of asterisks */
+            }
+        }
+        
+        .toggle-password {
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 2vh;
+            padding: 0.5vh 1vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px;
+            border-radius: 0.5vh;
+            background: rgba(255, 255, 255, 0.5);
+            height: 4vh;
+            transition: background-color 0.2s, transform 0.1s;
+            
+            &:hover {
+                background: rgba(255, 255, 255, 0.8);
+            }
+            
+            &:active {
+                transform: scale(0.95);
+            }
+        }
+    }
 }
 
-.login-btn {
-    button {
+.login-container {
+    
+    .enter-button {
+        width: 100%;
+        margin-top: 2vh;
         font-family: "Cinzel Decorative", serif;
         font-weight: 700;
         font-style: normal;
         background: rgb(241, 236, 227);
         border-radius: 2vh;
-        margin: 2vh;
-        padding: 2vh;
+        padding: 2vh 3vh;
         border: none;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
-            rgba(0, 0, 0, 0.23) 0px 3px 6px;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
         font-size: 2.5vh;
+        cursor: pointer;
+        transition: background 0.2s ease;
+        
+        &:active {
+            background: rgb(233, 228, 217);
+        }
     }
-    
-    button:active {
-        background: rgb(233, 228, 217);
-    }
-    
 }
