--- a/frontend/src/components/Welcome/index.scss
+++ b/frontend/src/components/Welcome/index.scss
@@ -7,6 +7,10 @@
         font-size: 5vh;
     }
 
+    div {
+        position: relative;
+    }
+
     button {
         font-family: "Cinzel Decorative", serif;
         font-weight: 700;
