--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*::-webkit-scrollbar {
+  width: 3px;
+  background-color: rgba(0,0,0,0);;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(0,0,0,0);;
+}
