--- a/frontend/src/components/SignUp/index.scss
+++ b/frontend/src/components/SignUp/index.scss
@@ -1,31 +1,16 @@
-.signup {
-    width: 30vw;
-    margin-left: 35vw;
-    display: flex;
+.welcome {
+    width: 50vw;
     margin-top: 15vh;
-    border-radius: 2vh;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    background: rgba(217, 208, 192, 0.624);
+    margin-left: 25vw;
 
-    span {
-        color: red;
+    p {
+        font-size: 5vh;
     }
 
-    form {
-        padding: 2.5vh;
-        margin-bottom: 1vh;
-
-        input {
-            outline: none;
-            text-align: center;
-            box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
-            rgba(0, 0, 0, 0.23) 0px 3px 6px;
-        }
+    div {
+        position: relative;
     }
 
-}
-
-.signup-btn {
     button {
         font-family: "Cinzel Decorative", serif;
         font-weight: 700;
@@ -33,15 +18,31 @@
         background: rgb(241, 236, 227);
         border-radius: 2vh;
         margin: 2vh;
-        padding: 2vh;
+        padding: 5vh;
         border: none;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
             rgba(0, 0, 0, 0.23) 0px 3px 6px;
-        font-size: 2.5vh;
+        font-size: 4vh;
+        width: 20vw;
+        height: 20vh;
+        margin-left: 15vw;
+        margin-top: 5vh;
+        text-indent: 2.5vw;
+        line-height: 10vh;
     }
     
     button:active {
         background: rgb(233, 228, 217);
     }
-    
+
+    .login, .signup {
+        text-indent: 3vw;
+    }
+
+    .login:hover, .signup:hover {
+        background: rgb(255, 255, 237);
+        transform: scale(1.05);
+        box-shadow: rgba(0,0,0,0.2) 0px 5px 10px,
+            rgba(0,0,0,0.19) 0px 5px 10px;
+    }
 }
